--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <html>
-    <head></head>
-    <body>
-        <h2>a</h2>
-    </body>
+	<head>
+		<!--Reset-->
+		<link rel="stylesheet" href="./styles/reset.css">
+		<!--Main Styles-->
+		<link rel="stylesheet" href="./styles/style.css">
+		<!--Checkboxes-->
+		<link rel="stylesheet" href="./styles/checkbox.css">
+	</head>
+	<body>
+		<div id="TitleBar">
+			<h2 class="text" id="title">GG-Green</h2>
+		</div>
+		<div id="Content">
+			<p id="ButtonTitle">Settings<p>
+			<div id="Toggle1">
+				<input class="inlineblock" type="checkbox">
+          		<p class="checkboxtext inlineblock text" id="checkboxtext">Save Data</p>
+			</div>
+		</div>
+	</body>
 </html>
