--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 			<h2 class="text" id="title">GG-Green</h2>
 		</div>
 		<div id="Content">
-			<p id="ButtonTitle">Settings<p>
-			<div id="Toggle1">
-				<input class="inlineblock" type="checkbox">
-          			<p class="checkboxtext inlineblock text" id="checkboxtext">Save Data</p>
+			<div id="Buttons">
+				<p id="ButtonTitle">Settings<p>
+				<div id="Toggle1">
+					<input class="inlineblock" type="checkbox">
+          				<p class="checkboxtext inlineblock text" id="checkboxtext">Save Data</p>
+				</div>
 			</div>
 		</div>
 	</body>
