--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 	<head>
 		<!--Reset-->
-		<link rel="stylesheet" href="./styles/reset.css">
+		<link rel="stylesheet" href="GG-Green.github.io/styles/reset.css">
 		<!--Main Styles-->
-		<link rel="stylesheet" href="./styles/style.css">
+		<link rel="stylesheet" href="GG-Green.github.io/styles/style.css">
 		<!--Checkboxes-->
-		<link rel="stylesheet" href="./styles/checkbox.css">
+		<link rel="stylesheet" href="GG-Green.github.io/styles/checkbox.css">
 	</head>
 	<body>
 		<div id="TitleBar">
