--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<!--Reset-->
 		<link rel="stylesheet" href="./styles/reset.css">
 		<!--Main Styles-->
-		<link rel="stylesheet" href="./styles/style.css">
+		<link rel="stylesheet" href="./styles/main.css">
 		<!--Checkboxes-->
 		<link rel="stylesheet" href="./styles/checkbox.css">
 	</head>
