--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<div id="Content">
 			<div id="Buttons">
-				<p id="ButtonTitle">Settings<p>
+				<p class="text" id="ButtonTitle">Settings<p>
 				<div id="Toggle1">
 					<input class="inlineblock" type="checkbox">
           				<p class="checkboxtext inlineblock text" id="checkboxtext">Save Data</p>
