--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<p class="text" id="ButtonTitle">Settings<p>
 				<div id="Toggle1">
 					<input class="inlineblock" type="checkbox">
-          				<p class="checkboxtext inlineblock text" id="checkboxtext">Save Data</p>
+          				<p class="checkboxtext inlineblock text" id="checkboxtext">Testing</p>
 				</div>
 			</div>
 		</div>
