--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="Buttons">
 				<p class="text" id="ButtonTitle">Settings<p>
 				<div id="Toggle1">
-					<input class="inlineblock" type="checkbox">
+					<input id="CheckBox1" class="inlineblock" type="checkbox">
           				<p class="checkboxtext inlineblock text" id="checkboxtext">Testing</p>
 				</div>
 			</div>
