--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="./styles/main.css">
 		<!--Checkboxes-->
 		<link rel="stylesheet" href="./styles/checkbox.css">
+		<script src="./scripts/main.js"></script>
+		
 	</head>
 	<body>
 		<div id="TitleBar">
