--- a/index.html
+++ b/index.html
@@ -4,23 +4,15 @@
 		<link rel="stylesheet" href="./styles/reset.css">
 		<!--Main Styles-->
 		<link rel="stylesheet" href="./styles/main.css">
-		<!--Checkboxes-->
-		<link rel="stylesheet" href="./styles/checkbox.css">
 		<script src="./scripts/main.js"></script>
 		
 	</head>
 	<body>
 		<div id="TitleBar">
-			<h2 class="text" id="title">GG-Green</h2>
+			<h2 class="text" id="title">Spark</h2>
 		</div>
 		<div id="Content">
-			<div id="Buttons">
-				<p class="text" id="ButtonTitle">Settings<p>
-				<div id="Toggle1">
-					<input id="CheckBox1" class="inlineblock" type="checkbox">
-          				<p class="checkboxtext inlineblock text" id="checkboxtext">Testing</p>
-				</div>
-			</div>
+			<a href="youtube.com">Install</a>
 		</div>
 	</body>
 </html>
