--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h2 class="text" id="title">Spark</h2>
 		</div>
 		<div id="Content">
-			<a href="https://youtube.com" target="_blank">Install</a>
+			<a href="https://cdn.discordapp.com/attachments/954895768014164092/1083858988233392249/SparkSetup.msi" target="_blank">Install</a>
 		</div>
 	</body>
 </html>
